--- a/packages/typography/src/text/text.module.css
+++ b/packages/typography/src/text/text.module.css
@@ -1,7 +1,6 @@
 @import "@uiid/tokens/typography.tokens.css";
 
 .text {
-  /* shared styles */
   text-box-trim: trim-both;
   text-box-edge: cap alphabetic;
   text-wrap: pretty;
@@ -12,85 +11,84 @@
     font-weight: 600;
     color: var(--shade-accent);
   }
+}
 
-  /* level styles */
-  &:where([level="-1"]) {
-    font-size: var(--typography-text--1-size);
-    font-weight: var(--typography-text--1-weight);
-    letter-spacing: var(--typography-text--1-leading);
-    line-height: var(--typography-text--1-lineHeight);
-  }
-  &:where([level="0"]) {
-    font-size: var(--typography-text-0-size);
-    font-weight: var(--typography-text-0-weight);
-    letter-spacing: var(--typography-text-0-leading);
-    line-height: var(--typography-text-0-lineHeight);
-  }
-  &:where([level="1"]) {
-    font-size: var(--typography-text-1-size);
-    font-weight: var(--typography-text-1-weight);
-    letter-spacing: var(--typography-text-1-leading);
-    line-height: var(--typography-text-1-lineHeight);
-  }
-  &:where([level="2"]) {
-    font-size: var(--typography-text-2-size);
-    font-weight: var(--typography-text-2-weight);
-    letter-spacing: var(--typography-text-2-leading);
-    line-height: var(--typography-text-2-lineHeight);
-  }
-  &:where([level="3"]) {
-    font-size: var(--typography-text-3-size);
-    font-weight: var(--typography-text-3-weight);
-    letter-spacing: var(--typography-text-3-leading);
-    line-height: var(--typography-text-3-lineHeight);
-  }
-  &:where([level="4"]) {
-    font-size: var(--typography-text-4-size);
-    font-weight: var(--typography-text-4-weight);
-    letter-spacing: var(--typography-text-4-leading);
-    line-height: var(--typography-text-4-lineHeight);
-  }
-  &:where([level="5"]) {
-    font-size: var(--typography-text-5-size);
-    font-weight: var(--typography-text-5-weight);
-    letter-spacing: var(--typography-text-5-leading);
-    line-height: var(--typography-text-5-lineHeight);
-  }
-  &:where([level="6"]) {
-    font-size: var(--typography-text-6-size);
-    font-weight: var(--typography-text-6-weight);
-    letter-spacing: var(--typography-text-6-leading);
-    line-height: var(--typography-text-6-lineHeight);
-  }
-  &:where([level="7"]) {
-    font-size: var(--typography-text-7-size);
-    font-weight: var(--typography-text-7-weight);
-    letter-spacing: var(--typography-text-7-leading);
-    line-height: var(--typography-text-7-lineHeight);
-  }
-  &:where([level="8"]) {
-    font-size: var(--typography-text-8-size);
-    font-weight: var(--typography-text-8-weight);
-    letter-spacing: var(--typography-text-8-leading);
-    line-height: var(--typography-text-8-lineHeight);
-  }
+.text-size--1 {
+  font-size: var(--typography-text--1-size);
+  font-weight: var(--typography-text--1-weight);
+  letter-spacing: var(--typography-text--1-leading);
+  line-height: var(--typography-text--1-lineHeight);
+}
+.text-size-0 {
+  font-size: var(--typography-text-0-size);
+  font-weight: var(--typography-text-0-weight);
+  letter-spacing: var(--typography-text-0-leading);
+  line-height: var(--typography-text-0-lineHeight);
+}
+.text-size-1 {
+  font-size: var(--typography-text-1-size);
+  font-weight: var(--typography-text-1-weight);
+  letter-spacing: var(--typography-text-1-leading);
+  line-height: var(--typography-text-1-lineHeight);
+}
+.text-size-2 {
+  font-size: var(--typography-text-2-size);
+  font-weight: var(--typography-text-2-weight);
+  letter-spacing: var(--typography-text-2-leading);
+  line-height: var(--typography-text-2-lineHeight);
+}
+.text-size-3 {
+  font-size: var(--typography-text-3-size);
+  font-weight: var(--typography-text-3-weight);
+  letter-spacing: var(--typography-text-3-leading);
+  line-height: var(--typography-text-3-lineHeight);
+}
+.text-size-4 {
+  font-size: var(--typography-text-4-size);
+  font-weight: var(--typography-text-4-weight);
+  letter-spacing: var(--typography-text-4-leading);
+  line-height: var(--typography-text-4-lineHeight);
+}
+.text-size-5 {
+  font-size: var(--typography-text-5-size);
+  font-weight: var(--typography-text-5-weight);
+  letter-spacing: var(--typography-text-5-leading);
+  line-height: var(--typography-text-5-lineHeight);
+}
+.text-size-6 {
+  font-size: var(--typography-text-6-size);
+  font-weight: var(--typography-text-6-weight);
+  letter-spacing: var(--typography-text-6-leading);
+  line-height: var(--typography-text-6-lineHeight);
+}
+.text-size-7 {
+  font-size: var(--typography-text-7-size);
+  font-weight: var(--typography-text-7-weight);
+  letter-spacing: var(--typography-text-7-leading);
+  line-height: var(--typography-text-7-lineHeight);
+}
+.text-size-8 {
+  font-size: var(--typography-text-8-size);
+  font-weight: var(--typography-text-8-weight);
+  letter-spacing: var(--typography-text-8-leading);
+  line-height: var(--typography-text-8-lineHeight);
+}
 
-  &:where([shade="background"]) {
-    color: var(--shade-background);
-  }
-  &:where([shade="surface"]) {
-    color: var(--shade-surface);
-  }
-  &:where([shade="muted"]) {
-    color: var(--shade-muted);
-  }
-  &:where([shade="halftone"]) {
-    color: var(--shade-halftone);
-  }
-  &:where([shade="accent"]) {
-    color: var(--shade-accent);
-  }
-  &:where([shade="foreground"]) {
-    color: var(--shade-foreground);
-  }
+.shade-background {
+  color: var(--shade-background);
+}
+.shade-surface {
+  color: var(--shade-surface);
+}
+.shade-muted {
+  color: var(--shade-muted);
+}
+.shade-halftone {
+  color: var(--shade-halftone);
+}
+.shade-accent {
+  color: var(--shade-accent);
+}
+.shade-foreground {
+  color: var(--shade-foreground);
 }
