refactor: so much refactor

--- a/packages/calendars/src/event-calendar/event-calendar.module.css
+++ b/packages/calendars/src/event-calendar/event-calendar.module.css
@@ -1,3 +1,15 @@
+.droppable-cell {
+  padding-inline: 0.125rem;
+
+  &[data-dragging] {
+    background-color: var(--shade-muted);
+  }
+}
+
+.event-calendar-header {
+  border-bottom: var(--globals-border-width) solid var(--globals-border-color);
+}
+
 .event-wrapper {
   user-select: none;
   transition: scale calc(var(--globals-transition-timing) / 2) ease-in-out;
