--- a/packages/indicators/src/status/status.module.css
+++ b/packages/indicators/src/status/status.module.css
@@ -2,16 +2,12 @@
   display: inline-flex;
 }
 
-[data-slot="status-dot"] {
+.status-dot {
   aspect-ratio: 1;
   background-color: var(--shade-foreground);
   border-radius: 99999px;
   display: inline-block;
   width: 0.5rem;
-
-  &:where([data-pulse="true"]) {
-    animation: pulse 1.5s infinite;
-  }
 }
 
 @keyframes pulse {
@@ -25,4 +21,24 @@
   100% {
     opacity: 1;
   }
+}
+
+.toggle-pulse {
+  animation: pulse 1.5s infinite;
+}
+
+.variant-positive {
+  background-color: var(--colors-positive-bg);
+}
+
+.variant-warning {
+  background-color: var(--colors-warning-bg);
+}
+
+.variant-negative {
+  background-color: var(--colors-negative-bg);
+}
+
+.variant-info {
+  background-color: var(--colors-info-bg);
 }
