refactor: field cleanup, add required

--- a/packages/forms/src/input/input.module.css
+++ b/packages/forms/src/input/input.module.css
@@ -50,3 +50,8 @@
 .size-large {
   font-size: var(--forms-size-large-fontSize);
 }
+
+.toggle-fullwidth {
+  width: 100%;
+  width: -webkit-fill-available;
+}
