refactor: number-field

--- a/packages/forms/src/field/field.module.css
+++ b/packages/forms/src/field/field.module.css
@@ -1,4 +1,4 @@
-.field-label[data-required] {
+.field-label[data-required="true"] {
   &::after {
     content: "*";
     color: var(--tone-negative);
