--- a/packages/forms/src/checkbox/checkbox.module.css
+++ b/packages/forms/src/checkbox/checkbox.module.css
@@ -1,8 +1,10 @@
 @import "@uiid/tokens/checkbox.tokens.css";
 
 .checkbox {
-  width: var(--checkbox-size);
+  /** todo: replace with default */
+  width: var(--checkbox-size-sm);
   aspect-ratio: 1;
+  flex-shrink: 0;
   display: flex;
   align-items: center;
   justify-content: center;
