--- a/packages/forms/src/input/input.module.css
+++ b/packages/forms/src/input/input.module.css
@@ -28,8 +28,8 @@
 
   /** Invalid */
   &[data-invalid] {
-    border-color: var(--tone-negative);
-    outline-color: var(--tone-negative);
+    border-color: var(--tones-negative);
+    outline-color: var(--tones-negative);
   }
 
   /** Hack to prevent browser-assigned autofill color */
