--- a/packages/tokens/src/globals.css
+++ b/packages/tokens/src/globals.css
@@ -120,9 +120,10 @@
   }
 
   a {
+    color: inherit;
     text-decoration: underline;
+    text-underline-offset: 2px;
     &:hover {
-      color: var(--shade-accent);
       text-decoration: none;
     }
   }
@@ -141,10 +142,10 @@
     position: absolute !important;
     width: 1px !important;
     height: 1px !important;
-    padding: 0 !important;
+    padding: 0;
     margin: -1px !important;
-    overflow: hidden !important;
-    clip: rect(0, 0, 0, 0) !important;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
     white-space: nowrap !important;
     border-width: 0 !important;
   }
